Remove 2023 "winner receives..." text

--- a/src/pages/2024/awards/index.mdx
+++ b/src/pages/2024/awards/index.mdx
@@ -114,7 +114,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     desc="This award recognizes the ongoing accomplishments of established oSTEM Chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. It is the oSTEM chapters that contribute greatly to this work. If your chapter has made a significant effort toward achieving these goals on your campus and/or in your community we ask you to apply and be recognized for your efforts."
     elig={[
       "Must be a verified Standard oSTEM Chapter or Affiliate Chapter of active status",
-      "Must have a representative attending the oSTEM Annual Conference. (Winner will receive 4 free student registrations and reimbursement of 3 room nights at the conference hotel if booked under oSTEM block by Monday, October 16, 2023.)",
+      "Must have a representative attending the oSTEM Annual Conference.",
     ]}
     borderColor="border-blue-500"
     alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
@@ -128,7 +128,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   elig={[
     "Must be a verified non-affiliate oSTEM Chapter of active status",
     "Must have been founded within two years of the submission of this application",
-    "Must have a representative attending the oSTEM Annual Conference. (Winner will receive 4 free student registrations and reimbursement of 3 room nights at the conference hotel if booked under oSTEM block by Monday, October 16, 2023.)",
+    "Must have a representative attending the oSTEM Annual Conference.",
   ]}
   borderColor="border-blue-500"
   alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
@@ -154,7 +154,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   desc="This award recognizes those advisors who have gone above and beyond in their support to one or more oSTEM chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. Our chapter's advisors support our chapters in succeeding in this mission. Their enthusiasm, advice, and dedication models the way for our chapters. If your advisor has made a significant effort toward achieving these goals on your campus and in your community we ask you to nominate them so they can be recognized for their effort."
   elig={[
     "Must be an advisor of a verified Standard oSTEM Chapter or Affiliate Chapter of active status in good standing with your Regional Coordinator",
-    "Must be attending the oSTEM Annual Conference. (Winner receives 1 free advisor registration + 3 free student registrations."
+    "Must be attending the oSTEM Annual Conference."
   ]}
   borderColor="border-blue-500"
   alert="Self-nominations are accepted and encouraged. If you have any questions regarding this application, please contact us at membership@ostem.org."
