Remove 2023 benefits, pt. 2

--- a/src/pages/2024/awards/index.mdx
+++ b/src/pages/2024/awards/index.mdx
@@ -102,11 +102,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
   demonstrate to those outside of your chapter or organization the amazing
   things you do.
 - Be recognized at an award ceremony during the Annual oSTEM Conference.
-- **Chapter, Rookie, and Chapter Leader Awards** will receive 4 free student
-  registrations and reimbursement of 3 room nights at the conference hotel if
-  booked under oSTEM block by Monday, October 16, 2023. ($1,500 value)
-- **Advisor Award** receives 1 free advsior registration + 3 free student
-  registrations. ($775 value)
+- We are finalizing additional award benefits for the 2024 Conference and will update this page once they have been determined. Please note that benefits may differ from 2023.
 
 <div>
   <AwardCard
