Prototype fees switch

--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -79,6 +79,11 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
   <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
   <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
 </ul>
+<br/>
+<CTAButton backgroundColor="chill-green" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
+  Purchase Collegiate Tickets
+</CTAButton>
+
 </Tab.Panel>
 <Tab.Panel>
 </Tab.Panel>
