--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -56,7 +56,7 @@ Registration is not open yet. If you'd like, you can fill out the form below to 
 
 Please pay attention to ticket deadlines, as they are **significantly earlier** than previous years. Ticket sales will open on June 1, 2024.
 
-<p><b className='text-red-600 dark:text-red-300'>All online ticket sales will close on September 30.</b> No exceptions will be made. If you miss the online ticket window, you may purchase tickets on-site for an additional cost. Please note that on-site tickets do not come with any food vouchers or special accommodations.</p>
+<p><b className='text-red-600 dark:text-red-300'>All online ticket sales will close on September 30.</b> No exceptions will be made. If you miss the online ticket window, you may purchase tickets on-site for an additional cost. On-site tickets do not come with any food vouchers or special accommodations.</p>
 
 <Tab.Group>
 <Tab.List className='flex mt-4 py-1 sm:py-2 sticky top-[87px] sm:top-[63px] flex space-x-1 bg-primary border-b border-text-color'>
@@ -71,7 +71,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <TicketTable></TicketTable>
 <p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
 <h4>Group Tickets</h4>
-<p>New this year, collegiate chapters may purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets " on the registration page to use this option. This option is useful if you (a) want to take advantage of early-bird pricing but don't have a finalized attendee list yet, or (b) are purchasing a large number of tickets under a chapter.</p>
+<p>New this year, collegiate chapters may purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets" on the registration page to use this option. This option is useful if you (a) want to take advantage of early-bird pricing but don't have a finalized attendee list yet, or (b) are purchasing a large number of tickets under a chapter.</p>
 <ul>
   <li>Group tickets cost the same as regular tickets, but you may purchase up to 99 in one transaction instead of 10.</li>
   <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
