--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -68,24 +68,26 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 </Tab.List>
 <Tab.Panels className='px-3 py-2'>
 <Tab.Panel>
-<TicketTable></TicketTable>
-<p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
-<h4>Group Tickets</h4>
-<p>New this year, collegiate chapters may purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets" on the registration page to use this option. This option is useful if you (a) want to take advantage of early-bird pricing but don't have a finalized attendee list yet, or (b) are purchasing a large number of tickets under a chapter.</p>
-<ul>
-  <li>Group tickets cost the same as regular tickets, but you may purchase up to 99 in one transaction instead of 10.</li>
-  <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
-  <li>You may buy blank group tickets first (i.e., to get early-bird pricing) and then fill in attendee names on a later day.</li>
-  <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
-  <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
-</ul>
-<br/>
-<CTAButton backgroundColor="chill-green" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
-  Purchase Collegiate Tickets
-</CTAButton>
-
+  <TicketTable type='collegiate'></TicketTable>
+  <p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
+  <h4>Group Tickets</h4>
+  <p>New this year, collegiate chapters may purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets" on the registration page to use this option. This option is useful if you (a) want to take advantage of early-bird pricing but don't have a finalized attendee list yet, or (b) are purchasing a large number of tickets under a chapter.</p>
+  <ul>
+    <li>Group tickets cost the same as regular tickets, but you may purchase up to 99 in one transaction instead of 10.</li>
+    <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
+    <li>You may buy blank group tickets first (i.e., to get early-bird pricing) and then fill in attendee names on a later day.</li>
+    <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
+    <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
+  </ul>
+  <br/>
+  <CTAButton backgroundColor="chill-green" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
+    Purchase Collegiate Tickets
+  </CTAButton>
 </Tab.Panel>
+
 <Tab.Panel>
+  <TicketTable type='professional'></TicketTable>
+  <p><b>Early Bird Discount:</b> Save $50/ticket by purchasing your ticket(s) by June 30th!</p>
 </Tab.Panel>
 <Tab.Panel>
 </Tab.Panel>
