--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -16,6 +16,7 @@ import landingImg from './registration-2024.png'
   layout="responsive"
   width="800"
   height="360"
+  className="rounded"
 />
 
 <br />
@@ -59,7 +60,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <p><b className='text-red-600 dark:text-red-300'>All online ticket sales will close on September 30.</b> No exceptions will be made. If you miss the online ticket window, you may purchase tickets on-site for an additional cost. On-site tickets do not come with any food vouchers or special accommodations.</p>
 
 <Tab.Group>
-<Tab.List className='flex mt-4 py-1 sm:py-2 sticky top-[87px] sm:top-[63px] flex space-x-1 bg-primary border-b border-text-color'>
+<Tab.List className='z-10 flex mt-4 py-1 sm:py-2 sticky top-[90px] sm:top-[63px] flex space-x-1 bg-primary border-b border-text-color'>
 <span className='grow'>
 {
     ['Collegiate', 'Professional', 'Expo Only'].map(e => (<Tab key={e} className={({selected}) => (`${selected ? `text-nav-green bg-green-300/25 border-nav-green/90` : `hover:bg-green-300/15   border-nav-green/60`} border focus:outline-none focus:ring-nav-green/70 focus:ring-1 focus-visible:ring-2 transition text-sm sm:text-base rounded px-2 md:px-3 mr-1 md:mr-3 py-0.5 md:py-1`)}>{e}</Tab>))
@@ -80,7 +81,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
   </ul>
   <br/>
-  <CTAButton backgroundColor="chill-green" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
+  <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
     Purchase Collegiate Tickets
   </CTAButton>
 </Tab.Panel>
