Update index.mdx - Fix Compilation Issue

--- a/src/pages/2024/awards/index.mdx
+++ b/src/pages/2024/awards/index.mdx
@@ -113,7 +113,7 @@ info@ostem.org or by contacting the individual team responsible for the award._
     desc="This award recognizes the ongoing accomplishments of established oSTEM Chapters. The guiding purpose of the oSTEM organization is to empower LGBTQ+ people in STEM to succeed personally, academically, and professionally by cultivating environments and communities that nurture innovation, leadership, and advocacy. It is the oSTEM chapters that contribute greatly to this work. If your chapter has made a significant effort toward achieving these goals on your campus and/or in your community we ask you to apply and be recognized for your efforts."
     elig={[
       "Must be a verified Standard oSTEM Chapter or Affiliate Chapter of active status",
-      "Must have a representative attending the oSTEM Annual Conference. (Winner will receive a code for 4 free student registrations.)
+      "Must have a representative attending the oSTEM Annual Conference. (Winner will receive a code for 4 free student registrations.)"
     ]}
     borderColor="border-blue-500"
     alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
