Update index.mdx - included award benefit value
Added values of prizes for collegiate chapter awards under Benefits section

--- a/src/pages/2024/awards/index.mdx
+++ b/src/pages/2024/awards/index.mdx
@@ -64,7 +64,7 @@ great submission.
 <br />
 
 _Offline versions of the applications can be provided upon request by contacting
-info@ostem.org or by contacting the individual team responsible for the award._
+info@ostem.org or the individual team responsible for the award._
 
 <br />
 
@@ -103,9 +103,9 @@ info@ostem.org or by contacting the individual team responsible for the award._
   things you do.
 - Be recognized at an award ceremony during the Annual oSTEM Conference.
 - **Chapter, Rookie, and Chapter Leader Awards** will receive 4 free student
-  registrations.
+  registrations. ($748 value)
 - **Advisor Award** receives 1 free advsior registration + 3 free student
-  registrations.
+  registrations. ($801 value)
 
 <div>
   <AwardCard
