High-level schedule release

--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -3,17 +3,75 @@ import { CTAButton } from "@/components/button/CTAButton";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Schedule" accent="amber">
+<SiteLayout title="Schedule" accent="nav-green">
 <br />
 
-<div className="text-bright-peach font-bold">
+<div className="font-bold text-nav-green">
 
 ## 2024 High-Level Conference Schedule
 
 </div>
 
-A tentative high-level conference schedule will be posted here before registration opens.
+All times and events listed below are **tentative** and are subject to change.
 
-In the meantime, you may take a look at the [archived 2023 schedule](/archive/2023/schedule) for a _very_ general sense of what conference is like.
+<div className="text-teal-700 dark:text-teal-300">
+
+### Thursday - October - 17
+
+</div>
+
+- **12:00 PM:** Registration Desk / Help Desk opens
+- **1:30 PM - 2:00 PM:** New to the Conference Session
+- **2:00 PM - 5:00 PM:** Pre-Conference Workshop Blocks 
+- **5:30 PM - 7:00 PM:** Sponsored Networking Sessions
+- **7:00 PM - 8:00 PM:** Membership Mixers
+
+<div className="text-nav-blue">
+
+### Friday - October - 18
+
+</div>
+
+- **7:00 AM:** Registration Desk / Help Desk opens
+- **8:00 AM - 9:00 AM:** Plenary Kick-off
+- **9:30 AM - 1:00 PM:** Sponsored Site Tours\*
+- **10:00 AM - 12:00 PM:** Career and Graduate Expo Success Clinic
+- **9:15 AM - 10:15 AM:** Workshop Block 1
+- **10:30 AM - 11:30 AM:** Workshop Block 2
+- **11:45 AM - 1:00 PM:** Plenary Lunch
+- **1:00 PM - 5:00 PM:** Career and Graduate School Expo
+- **5:00 PM - 6:00 PM:** Workshop Block 3
+- **6:30 PM - 8:00 PM:** Sponsored Networking Sessions
+- **8:00 PM - 9:30 PM:** Evening Social 
+
+\* Site tours are very tentative, and may not occur at this year’s conference.
+
+<div className="text-indigo-700 dark:text-indigo-300">
+
+### Saturday - October - 19
+
+</div>
+
+- **7:00 AM:** Registration Desk / Help Desk opens
+- **8:00 AM:**  Poster room opens
+- **9:00 AM - 10:00 AM:** Workshop Block 4
+- **11:00 AM - 3:00 PM:** Career and Graduate School Expo
+- **10:30 AM - 11:30 AM:** Poster Presentation 1
+- **2:30 PM - 3:30 PM:** Poster Presentation 2
+- **4:00 PM - 5:00 PM:** Workshop Block 5
+- **5:00 PM - 6:30 PM:** Evening Networking Receptions (Sponsored)
+- **7:30 PM - 9:00 PM:** oSTEM Ga(y)la\*\*
+
+\*\* oSTEM Ga(y)la tickets are a paid add-on during registration.
+
+<div className="text-nav-purple">
+
+### Sunday - October - 20
+
+</div>
+
+- **8:00 AM:** Help Desk opens
+- **10:00 AM - 11:00 AM:** Decompression Creative Zone 
+- **10:00 AM - 11:00 AM:** Volunteering with oSTEM
 
 </SiteLayout>
