--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -34,7 +34,7 @@ us in a celebration of diversity across all fields.
 
 </div>
 
-Registration is not open yet. If you'd like, you can fill out the form below to be notified when tickets for oSTEM 2024 go on sale.
+Registration will be available starting on June 1. If you'd like, you can fill out the form below to be notified when tickets for oSTEM 2024 go on sale.
 
 <div className="my-2 flex flex-col items-center sm:flex-row justify-center">
   <div className="my-1 sm:mx-2">
@@ -71,39 +71,66 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <Tab.Panel>
   <TicketTable type='collegiate'></TicketTable>
   <p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
-  <h4>Group Tickets</h4>
-  <p>We are piloting group tickets this year, allowing collegiate chapters to purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets" on the registration page to use this option.</p>
-  <ul>
-    <li>Group and individual tickets cost the same, but you may purchase up to 99 in one transaction instead of 10.</li>
-    <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
-    <li>You may buy blank group tickets first and then fill in attendee names on a later day.</li>
-    <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
-    <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
-  </ul>
+  <p>Scroll down for more information about purchasing tickets.</p>
   <br/>
   <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
     Purchase Collegiate Tickets
   </CTAButton>
 </Tab.Panel>
-
 <Tab.Panel>
   <TicketTable type='professional'></TicketTable>
   <p><b>Early Bird Discount:</b> Save $50/ticket by purchasing your ticket(s) by June 30th!</p>
-  <h4>Group Tickets</h4>
-  <p>We are piloting group tickets this year, allowing companies to purchase tickets for their employees in bulk. Select "Professional (Member) - Group Tickets" on the registration page to use this option.</p>
-  <ul>
-    <li>Group and individual tickets cost the same, but you may purchase up to 99 in one transaction instead of 10.</li>
-    <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
-    <li>You may buy blank group tickets first and then fill in attendee names on a later day.</li>
-    <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
-    <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
-  </ul>
+  <p>Scroll down for more information about purchasing tickets.</p>
 </Tab.Panel>
 <Tab.Panel>
 </Tab.Panel>
 </Tab.Panels>
 </Tab.Group>
 </TopicSquare>
+
+
+<h4>Group Tickets</h4>
+  <p>We are piloting group tickets this year, allowing collegiate chapters and companies to purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets" or "Professional (Member) - Group Tickets" on the registration page to use this option.</p>
+  <ul>
+    <li>Group and individual tickets cost the same, but you may purchase up to 30 in one transaction instead of 10.</li>
+    <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
+    <li>You may buy blank group tickets first and then fill in attendee names on a later day.</li>
+    <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
+    <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
+  </ul>
+<br/>
+
+<h4>oSTEM Ga(y)la</h4>
+<p>Join us for a special evening gala where (somebody provide a description for this, please)</p>
+<p><b className='text-nav-green'>Please note:</b> Ga(y)la tickets are <b>not included</b> with your conference pass and require an add-on purchase.</p>
+
+---
+
+<div className="text-nav-green font-bold text-center">
+
+### Common Questions
+
+</div>
+
+#### What if I miss the online deadline? Will there be on-site registration?
+If you miss the online registration deadline (September 30th), you will be able to register on-site. Please note that on-site registration will be more expensive than online prices, will not include any meals, and will only have limited accomodations available.
+
+No exceptions will be made for online registration after the deadline. There is no "late" online registration option this year.
+
+#### Are registration discounts available?
+Yes, oSTEM members get a discounted rate. Furthermore, the member discount stacks with the early-bird discount allowing you to save more if you purchase your ticket by June 30th.
+
+#### I submitted a RFP/RFPT. When should I register?
+Attendees with an accepted [Request for Programs (RFP)](/2024/present/request-for-programs) or [Request for Panel Topics (RFPT)](/present/request-for-panel-topics) submission will receive a 50% registration discount\* on their conference pass. As such, you should hold off registration until you hear whether your submission was accepted or not.
+
+We do not expect to finish judging submissions by June 30th, however we understand that attendees may want the early-bird rate if their submission is not accepted. Therefore, this year we will offer extended early-bird registration rates to all program/panel topic applicants regardless of whether your submission is accepted. **Please do not register until you receive a status update on your submission.**
+
+\* Discounts are limited. Please view the respective RFP and RFPT pages for more information.
+
+#### I missed the early-bird deadline. Can I still get the early-bird rate?
+If you submitted a RFP or RFPT (see above), you will still be able to register at the early-bird rate after it closes. No other exceptions will be made.
+
+<br/>
 
 ---
 
@@ -113,15 +140,8 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 
 </div>
 
-While 2024 Conference Registration hasn't opened yet, you can take a look at last year's registration to get a sense of what registration generally looks like. We plan on continuing to offer similar ticket tiering (discounted member pricing, discounted early-bird pricing, and expo-only options), however, you can expect registration to open sometime in June instead of August this year.
+If needed, you can view [last year's conference registration page here](/archive/2023/registration).
 
-<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
-  <div className="my-1 sm:mx-2">
-    <CTAButton onClick="/archive/2023/registration" target="_self">
-      Archived 2023 Registration
-    </CTAButton>
-  </div>
-</div>
 <br />
 
 ---
