--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -12,7 +12,7 @@ import landingImg from './registration-2024.png'
 <Image
   src={landingImg}
   placeholder="blur"
-  alt=""
+  alt="oSTEM conference attendees sitting around a table, with the camera focused on one attendee with a wide smile."
   layout="responsive"
   width="800"
   height="360"
@@ -146,8 +146,11 @@ If needed, you can view [last year's conference registration page here](/archive
 
 ---
 
-For further conference and/or accessibility questions or concerns, please
-contact conference@ostem.org.
+For further conference questions or concerns, please contact conference@ostem.org.
+
+For inquiries regarding available conference accommodations or to request this
+document in an accessible format, please contact the accessibility team at
+access@ostem.org.
 
 ---
 
