--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -68,22 +68,33 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 </span>
 </Tab.List>
 <Tab.Panels className='px-3 py-2'>
-<Tab.Panel>
-  <TicketTable type='collegiate'></TicketTable>
-  <p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
-  <p>Scroll down for more information about purchasing tickets.</p>
-  <br/>
-  <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
-    Purchase Collegiate Tickets
-  </CTAButton>
-</Tab.Panel>
-<Tab.Panel>
-  <TicketTable type='professional'></TicketTable>
-  <p><b>Early Bird Discount:</b> Save $50/ticket by purchasing your ticket(s) by June 30th!</p>
-  <p>Scroll down for more information about purchasing tickets.</p>
-</Tab.Panel>
-<Tab.Panel>
-</Tab.Panel>
+  <Tab.Panel>
+    <TicketTable type='collegiate'></TicketTable>
+    <p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
+    <p>Scroll down for more information about purchasing tickets and add-ons.</p>
+    <br/>
+    <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
+      Purchase Collegiate Tickets
+    </CTAButton>
+  </Tab.Panel>
+  <Tab.Panel>
+    <TicketTable type='professional'></TicketTable>
+    <p><b>Early Bird Discount:</b> Save $50/ticket by purchasing your ticket(s) by June 30th!</p>
+    <p>Scroll down for more information about purchasing tickets and add-ons.</p>
+    <br/>
+    <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/cmxb3vkv">
+      Purchase Professional Tickets
+    </CTAButton>
+  </Tab.Panel>
+  <Tab.Panel>
+    <p>Expo Only tickets only include access to the Graduate School and Career Fair Expo.<br/>These tickets <b>do not include</b> any other programming or any meals.</p>
+    <TicketTable type='expo'></TicketTable>
+    <p>Scroll down for more information about purchasing tickets.</p>
+    <br/>
+    <CTAButton backgroundColor="bright-peach" onClick="https://whova.com/portal/registration/ostem_202411/b2ymkt99">
+      Purchase Expo Only Tickets
+    </CTAButton>
+  </Tab.Panel>
 </Tab.Panels>
 </Tab.Group>
 </TopicSquare>
@@ -125,7 +136,7 @@ Attendees with an accepted [Request for Programs (RFP)](/2024/present/request-fo
 
 We do not expect to finish judging submissions by June 30th, however we understand that attendees may want the early-bird rate if their submission is not accepted. Therefore, this year we will offer extended early-bird registration rates to all program/panel topic applicants regardless of whether your submission is accepted. **Please do not register until you receive a status update on your submission.**
 
-\* Discounts are limited. Please view the respective RFP and RFPT pages for more information.
+\* There is a limit on how many discounted tickets you can purchase. Please view the respective RFP and RFPT pages for more information.
 
 #### I missed the early-bird deadline. Can I still get the early-bird rate?
 If you submitted a RFP or RFPT (see above), you will still be able to register at the early-bird rate after it closes. No other exceptions will be made.
