--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -112,8 +112,12 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <br/>
 
 <h4>oSTEM Ga(y)la</h4>
-<p>Join us for a special evening gala where (somebody provide a description for this, please)</p>
-<p><b className='text-nav-green'>Please note:</b> Ga(y)la tickets are <b>not included</b> with your conference pass and require an add-on purchase.</p>
+<p>Join us for Ga(y)la, the perfect way to round off the conference. This is your chance to celebrate the weekend, the connections you've made and the achievements of our community throughout the year, complete with dinner and entertainment.</p>
+<ul>
+  <li>Ga(y)la tickets are an optional, paid add-on - they are <b className='text-nav-pink'>not included</b> with your conference pass. Each attendee needs their own add-on ticket.</li>
+  <li>Ga(y)la is on Saturday night. Please refer to <a href='schedule'>our high-level schedule</a> for more details.</li>
+</ul>
+<br/>
 
 ---
 
