Significantly more mobile-friendly tables

--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -67,7 +67,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 }
 </span>
 </Tab.List>
-<Tab.Panels className='px-3 py-2'>
+<Tab.Panels className='sm:px-3 py-2'>
   <Tab.Panel>
     <TicketTable type='collegiate'></TicketTable>
     <p><b>Early Bird Discount:</b> Save $25/ticket by purchasing your ticket(s) by June 30th!</p>
