Add membership info

--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -99,6 +99,16 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 </Tab.Group>
 </TopicSquare>
 
+<h4>Membership</h4>
+  <p>oSTEM members receive discounted tickets. Member discounts stack with early-bird discounts.</p>
+  <ul>
+    <li>If you are not currently a member, you can <a href='https://ostem.org/page/how-to-join-ostem'>become one on our Join oSTEM page</a>.</li>
+    <li>Members will need their <b>Member ID</b> to purchase tickets at the member rate. You can find your ID* by going to oSTEM.org and clicking on <a target='_blank' href='https://web.membernova.com/305556/User/Login?OriginalUrl=4pKVpb/xoDZG1dUAW84nsHhYAw61eLT2svqZ8qNGE4fU3N+bOXWDED/RQHxka661'>Member Login</a>. Your ID will be displayed under the Member Tab.
+    <br/>
+    * <i>We are actively migrating to a new member management system, so these instructions may change.</i>
+    </li>
+  </ul>
+<br/>
 
 <h4>Group Tickets</h4>
   <p>We are piloting group tickets this year, allowing collegiate chapters and companies to purchase tickets for their members in bulk. Select "Collegiate (Member) - Group Tickets" or "Professional (Member) - Group Tickets" on the registration page to use this option.</p>
